--- a/ControlesdeUsuario/ControlesdeUsuario.csproj
+++ b/ControlesdeUsuario/ControlesdeUsuario.csproj
@@ -67,8 +67,22 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Parametro circulo.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="ParametrosTriangulo.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Parametro circulo.xaml.cs">
+      <DependentUpon>Parametro circulo.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="ParametrosTriangulo.xaml.cs">
+      <DependentUpon>ParametrosTriangulo.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
